fix(style): fix dashboard elements spacing

--- a/src/components/generic/carousel-list/CarouselList.scss
+++ b/src/components/generic/carousel-list/CarouselList.scss
@@ -2,7 +2,6 @@
   $button-size: 44px;
 
   position: relative;
-  padding: $spacing-unit;
 
   &__container {
     overflow-x: hidden;
